[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"


[project]
name = "ai-incident-investigator"
version = "0.1.0"
description = "AI-powered incident classification, root-cause analysis, and investigation reporting."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
    { name = "Boris Tomka" },
]

keywords = [
    "ai",
    "incident-analysis",
    "log-analysis",
    "root-cause-analysis",
    "fastapi",
    "openai",
    "observability",
    "incident-response",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Logging",
    "Typing :: Typed",
]

dependencies = [
    "fastapi[standard]",
    "openai-agents",
    "pydantic-settings",
    "python-multipart",
    "sqlalchemy>=2.0",
    "aiosqlite",
]


[project.optional-dependencies]
dev = [
    "build",
    "httpx",
    "pytest",
    "pytest-asyncio",
    "ruff",
    "twine",
]


[project.scripts]
incident-investigator = "incident_investigator.cli:main"


[project.urls]
Homepage = "https://github.com/tomkaboris/AI-Incident-Investigator"
Repository = "https://github.com/tomkaboris/AI-Incident-Investigator"
Issues = "https://github.com/tomkaboris/AI-Incident-Investigator/issues"


[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"


[tool.ruff]
line-length = 100
target-version = "py312"


[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
]